feat(user): user list,create services and commontable,commonDialog components added

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -9,3 +9,8 @@
 .card-container {
   @apply grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-x-6 gap-y-8;
 }
+
+.p-datatable-table-container {
+  @apply grow!;
+  flex-grow: 1;
+}
